@startuml

title __APP's Class Diagram__\n

  namespace com.example.callog {
    class com.example.callog.BuildConfig {
    }
  }
  

  namespace com.example.callog {
    class com.example.callog.CallLog {
    }
  }
  

  namespace com.example.callog {
    class com.example.callog.CallLogContract {
    }
  }
  

  namespace com.example.callog {
    class com.example.callog.CallLogDBHelper {
    }
  }
  

  namespace com.example.callog {
    class com.example.callog.CallLogListAdapter {
    }
  }
  

  namespace com.example.callog {
    class com.example.callog.MainActivity {
    }
  }
  

  namespace com.example.callog {
    class com.example.callog.ReadCallLogs {
    }
  }
  

  namespace com.example.callog {
    class com.example.callog.SearchByDateActivity {
    }
  }
  

  namespace com.example.callog {
    class com.example.callog.SearchByNumberActivity {
    }
  }
  

  namespace com.example.callog {
    class com.example.callog.SplashScreenActivity {
    }
  }
  

  namespace com.example.callog {
    class com.example.callog.ViewAllLogsActivity {
    }
  }
  

  com.example.callog.CallLogDBHelper -up-|> android.database.sqlite.SQLiteOpenHelper
  com.example.callog.CallLogListAdapter -up-|> android.widget.ArrayAdapter
  com.example.callog.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.callog.MainActivity o-- com.example.callog.CallLogDBHelper : callLogDBHelper
  com.example.callog.SearchByDateActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.callog.SearchByNumberActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.callog.SplashScreenActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.callog.ViewAllLogsActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.callog.ViewAllLogsActivity o-- com.example.callog.CallLogDBHelper : callLogDBHelper


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
